# aoc2019

d1/: Cargo.toml
d1/src/: main.rs
d10/: Cargo.toml  input-part2-test0.txt  psuedo-code.md
d10/src/: debug.rs  main.rs
d11/: Cargo.toml
d11/src/: main.rs
d12/: Cargo.toml
d12/src/: main.rs
d13/: Cargo.toml
d13/src/: main.rs
d14/: Cargo.toml
d14/src/: main.rs
d2/: Cargo.toml
d2/src/: main.rs
d3/: Cargo.toml
d3/src/: main.rs
d4/: Cargo.toml
d4/src/: main.rs
d5/: Cargo.toml
d5/src/: main.rs
d6/: Cargo.toml
d6/src/: main.rs
d7/: Cargo.toml
d7/src/: main.rs
d8/: Cargo.toml
d8/src/: main.rs
d9/: Cargo.toml  input-lines.txt
d9/src/: main.rs
