[package]
name = "d12-simd"
version = "0.1.0"
authors = ["peter.wong <peter.wong@servicenow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

packed_simd = "0.3.3"
num-integer = "0.1.41"

[features]

default = [ ]
sleef-sys = [ "packed_simd/sleef-sys" ]
core_arch = [ "packed_simd/core_arch" ]